# c-cobalt

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  a.out  configure.py  init.lua  xmake.lua
assets/shaders/: basic.frag.glsl  basic.vert.glsl  color.frag.glsl  color.vert.glsl  diffuse.frag.glsl  diffuse.vert.glsl
src/: main.c
src/loader/: mesh_loader.c  mesh_loader.h
src/math/: camera.c  camera.h  functions.h  matrix.c  matrix.h  transform.c  transform.h  vec.c  vec.h  vector.c  vector.h
src/renderer/: material.c  material.h  mesh.c  mesh.h  model.c  model.h  renderer.c  renderer.h  shader.c  shader.h  texture.c  texture.h  vertex.c  vertex.h
src/scene/: scene.c  scene.h
src/structs/: base.c  base.h  vec3_map.c  vec3_map.h  vector.c  vector.h  vertex_map.c  vertex_map.h
src/utils/: arr.c  arr.h  error.h  file.c  file.h  macros.h
